# adpcm

./: ChangeLog  Makefile.am  README  adpcm.h  configure.in  dvi_adpcm.c  libadpcm.c  libadpcm.pc.in
debian/: changelog  control
